fix z-index conflict with sticky header

--- a/resources/css/filament-tiptap-editor.css
+++ b/resources/css/filament-tiptap-editor.css
@@ -6,7 +6,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 39;
+  z-index: 51;
   display: flex;
   flex-direction: column;
   height: 100%;
